--- a/개발환경 세팅.md
+++ b/개발환경 세팅.md
@@ -78,7 +78,7 @@
 
 ------
 
-## Python
+## Python & django
 
 - **파이썬 설치** 
 
@@ -97,6 +97,16 @@
 
   ```python
   print("Hello, World")
+  ```
+
+- **django 설치**
+
+  > 장고란 파이썬에서 웹사이트를 제작할 수 있도록 도와주는 프레임워크
+
+  - 터미널창에서 아래의 명령어 입력
+
+  ```bash
+  pip install django
   ```
 
   ​
